# NewBe

backend/: Dockerfile  fly.toml  pyproject.toml  requirements.txt  state.py
backend/app/: main.py
backend/app/core/: configs.py  prompts.py
backend/app/db/: queries.py  schemas.py
backend/app/pipelines/: states.py  workflow.py
backend/app/pipelines/agents/: __init__.py  collector.py  summarizer.py
backend/app/resources/: personas.json
backend/app/routes/: news.py
backend/app/services/: services.py
backend/tests/: test_collector.py
frontend/: .gitignore  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  edit-page.tsx  index.tsx  menu-page.tsx
frontend/components/: DateIndicator.tsx  Icons.tsx  MenuHeader.tsx
frontend/components/editPageBody/: DragOverlay.tsx  FeedList.tsx  Personas.tsx  Profile.tsx  Token.tsx
frontend/components/mainBody/: Body.tsx  Content.tsx  Page.tsx  Title.tsx
frontend/components/mainFooter/: Dot.tsx  Footer.tsx  NavigationButton.tsx  PageIndicator.tsx
frontend/components/menuBody/: GoogleLoginButton.tsx  MenuBody.tsx  MenuButton.tsx  MenuDefault.tsx  MenuLoading.tsx
frontend/constants/: colors.ts  data.ts  sizes.ts  typography.ts
frontend/resources/: personas.json  summaries.json
frontend/systems/: account.tsx  persona.tsx  request.tsx  scroll.tsx
