[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "googlenewsdecoder>=0.1.7",
    "langchain>=1.2.15",
    "pydantic>=2.12.5",
    "trafilatura>=2.0.0",
]
