[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "googlenews>=1.6.16",
    "googlenewsdecoder>=0.1.7",
    "langchain[anthropic]>=1.2.15",
    "py3langid>=0.3.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.44.0",
]
